# python-hole

./: CHANGES.rst  LICENSE  README.rst  example.py  examplev5.py  examplev6.py  pyproject.toml  setup.py
.github/workflows/: python.yml
hole/: __init__.py  exceptions.py  v5.py  v6.py
tests/: __init__.py  test_hole.py
