[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hole"
version = "0.9.1"
description = "Python API for interacting with *hole."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Fabian Affolter", email = "fabian@affolter-engineering.ch" },
]

requires-python = ">=3.13"

dependencies = [
    "aiohttp<4",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-asyncio>=0.21",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=9",
  "pytest-asyncio>=0.21",
  "aiohttp>=3.8.4,<4"
]

[tool.hatch.envs.test.scripts]
run = "pytest"

[project.urls]
Homepage = "https://github.com/home-assistant-ecosystem/python-hole"
Download = "https://github.com/home-assistant-ecosystem/python-hole/releases"